FullQa New/src/Prodly Moover/objects/ReplicateIt_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Debug_Deployment_Email__c</fullName>
        <description>The email address to send the tracked deployment API call to.</description>
        <inlineHelpText>The email address to send the tracked deployment API call to.</inlineHelpText>
        <label>Debug Deployment Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Debug_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to have the deployment invocation sent to Prodly support and skip the actual deployment. Allows support to debug errors by reproducing the deployment in a local development environment.</description>
        <inlineHelpText>Enable this setting to have the deployment invocation sent to Prodly support and skip the actual deployment. Allows support to debug errors by reproducing the deployment in a local development environment.</inlineHelpText>
        <label>Debug Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instance_Type__c</fullName>
        <description>Point app to Development, QA and Preview instances of the Prodly Moover service, in addition to Production. Should only be used by Prodly support.</description>
        <inlineHelpText>Point app to Development, QA and Preview instances of the Prodly Moover service, in addition to Production. Should only be used by Prodly support.</inlineHelpText>
        <label>Instance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Record_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to stop storing individual record results in the source org overall deployment result tracking. Helps improve used data space, especially for large deployment sets.</description>
        <inlineHelpText>Enable this setting to stop storing individual record results in the source org overall deployment result tracking. Helps improve used data space, especially for large deployment sets.</inlineHelpText>
        <label>No Record Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Success_Record_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Success Record Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Selector_Page_Size__c</fullName>
        <defaultValue>900</defaultValue>
        <description>The number of objects to display in the Deployment Object picklist on the data set editor. For orgs with a large number of custom objects, set a lower number to improve performance.</description>
        <inlineHelpText>The number of objects to display in the Deployment Object picklist on the data set editor. For orgs with a large number of custom objects, set a lower number to improve performance.</inlineHelpText>
        <label>Object Selector Page Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Moover Settings</label>
</CustomObject>